# otus-homeworks

./: .gitignore  CMakeLists.txt  conceptHasTupleSize.html  conceptHomogeneousTuple.html  conceptIpContainer.html  conceptStringLike.html  concepts.html  concepts.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  graph_legend.md5  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  navtreedata.js  navtreeindex0.js
.github/workflows/: main.yml  project-ci.yml  release.yml
hw-1-helloworld/: CMakeLists.txt
hw-1-helloworld/src/: main.cpp
hw-1-helloworld/tests/: test_version.cpp
hw-10-bulk/: CMakeLists.txt
hw-10-bulk/include/async/: async.h  async_queue.hpp  global_state.hpp  session.hpp
hw-10-bulk/src/: bulk_server.cpp  main.cpp
hw-10-bulk/src/async/: async.cpp  global_state.cpp  session.cpp
hw-11-join/: CMakeLists.txt
hw-11-join/include/join_server/: join_server.h  table.h
hw-12-mapreduce/: CMakeLists.txt
hw-12-mapreduce/scripts/: run_locally.sh.in
hw-12-mapreduce/src/: main.cpp  mapper_mean.cpp  mapper_variance.cpp  reducer_mean.cpp  reducer_variance.cpp
hw-12-mapreduce/test/: test_mapreduce.cpp
hw-13-ML/: CMakeLists.txt
hw-13-ML/include/infra_ml/: model.hpp  models.hpp
hw-13-ML/src/: main.cpp
hw-2-ip-filter/include/: data_structs.hpp
hw-2-ip-filter/tests/: test_version.cpp
hw-3-custom-allocator/: CMakeLists.txt
hw-3-custom-allocator/include/: data_structs.hpp
hw-4-doxygen/: Doxyfile
hw-4-doxygen/src/: main.cpp
hw-5-editor/: CMakeLists.txt
hw-5-editor/src/: main.cpp
hw-5-editor/src/slint_vector_editor/components/: components.hpp
hw-5-editor/src/slint_vector_editor/controller/: editor_controller.hpp
hw-5-editor/src/slint_vector_editor/ecs/: entity.hpp  registry.hpp  system.hpp
hw-5-editor/src/slint_vector_editor/serialization/: seriazalition_system.hpp  vector_editor.capnp  vector_editor.capnp.c++  vector_editor.capnp.h
hw-5-editor/src/slint_vector_editor/systems/: input_system.hpp  render_system.hpp  serialization_system.hpp
hw-5-editor/src/slint_vector_editor/utils/: signal.hpp
hw-5-editor/src/slint_vector_editor/view/: editor.slint  slint_canvas_view.cpp  slint_canvas_view.hpp
hw-6-matrix/: CMakeLists.txt
hw-6-matrix/include/: infinity_matrix.hpp
hw-6-matrix/src/: main.cpp
hw-7-bulk/: CMakeLists.txt
hw-7-bulk/include/: bulk.hpp
hw-7-bulk/src/: main.cpp
hw-8-boost/: CMakeLists.txt
hw-8-boost/include/: duplicates_with_boost.hpp
hw-8-boost/src/: main.cpp
hw-9-async/: CMakeLists.txt
hw-9-async/include/async/: async.h  async_queue.hpp  global_state.hpp  log_task.hpp
hw-9-async/src/: main.cpp
hw-9-async/src/async/: async.cpp  global_state.cpp
include/: custom_allocator.hxx  data_structs.hpp  my_list.hxx
search/: all_0.js  all_1.js  all_2.js  concepts_1.js  functions_1.js  functions_3.js  searchdata.js
src/: bandits_1409.cpp  code_1877.cpp  ip_filter.cpp  lib.cpp  main.cpp  mega_1787.cpp  tail_2001.cpp  workdays_1264.cpp
